add in code progects

--- a/index.html
+++ b/index.html
@@ -101,10 +101,15 @@
         <ul class="contacts-list">
           <li class="list-item">
             <p class="item-desc">
-              <img class="cont-icon" src="./img/viber.svg" alt="
-              viber" />
+              <img
+                class="cont-icon"
+                src="./img/viber.svg"
+                alt="
+              viber"
+              />
               <a class="link-contact" href="viber://chat?number=%2B79042250809">
-                Viber</a>
+                Viber</a
+              >
             </p>
           </li>
           <li class="list-item">
@@ -175,13 +180,43 @@
         <div class="line-wrap">
           <span class="line line-left"></span>
         </div>
-        <p>
+        <ul class="list">
+          <li>
+            <a target="_blank"
+              class="link"
+              href="https://igorlutoshkin.github.io/Setting-the-C-axis/"
+              >Setting-the-C-axis</a
+            >
+          </li>
+          <li>
+            <a target="_blank"
+              class="link"
+              href="https://igorlutoshkin.github.io/Clock-it-incubator/"
+              >Clock-it-incubator</a
+            >
+          </li>
+          <li>
+            <a target="_blank"
+              class="link"
+              href="https://igorlutoshkin.github.io/Plants/"
+              >Plants</a
+            >
+          </li>
+          <li>
+            <a target="_blank"
+              class="link"
+              href="https://igorlutoshkin.github.io/Travel-to-Japan/"
+              >Travel-to-Japan</a
+            >
+          </li>
+        </ul>
+        <!--  <p>
           Given a random non-negative number, you have to return the digits of
           this number within an array in reverse order
         </p>
 
         <pre>
-            <code>
+          <code>
             function digitize(n) {
               let a = (Array.from(String(n), Number)).reverse(); 
               return a; 
@@ -197,7 +232,7 @@
             href=" https://github.com/IgorLutoshkin/CODEWARS-JS.git"
             >GitHub
           </a>
-        </p>
+        </p> -->
       </section>
 
       <section class="work">
