fix html about-desc

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
           find a solution to the problem on my own, bring the work started to
           the end and on time. Worked on HTML/CSS layouts for web pages using
           Figma. I have experience with the layout of adaptive landing pages
-          using HTML and CSS. I have skills working with SVG graphics, simple
-          JavaScript animation, basic knowledge of the Git version control
+          using HTML and CSS. There are skills of working with SVG graphics, simple
+          Animation in JavaScript, basic knowledge of the version control system Git
           system.
         </p>
       </section>
