fix bugs & delete img

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       sizes="16x16"
       href="./img/favicon_io/favicon-16x16.png"
     />
-    <link rel="manifest" href="./img/favicon_io/favicon.ico" />
     <title>Igor Lutoshkin</title>
   </head>
 
@@ -182,28 +181,32 @@
         </div>
         <ul class="list">
           <li>
-            <a target="_blank"
+            <a
+              target="_blank"
               class="link"
               href="https://igorlutoshkin.github.io/Setting-the-C-axis/"
               >Setting-the-C-axis</a
             >
           </li>
           <li>
-            <a target="_blank"
+            <a
+              target="_blank"
               class="link"
               href="https://igorlutoshkin.github.io/Clock-it-incubator/"
               >Clock-it-incubator</a
             >
           </li>
           <li>
-            <a target="_blank"
+            <a
+              target="_blank"
               class="link"
               href="https://igorlutoshkin.github.io/Plants/"
               >Plants</a
             >
           </li>
           <li>
-            <a target="_blank"
+            <a
+              target="_blank"
               class="link"
               href="https://igorlutoshkin.github.io/Travel-to-Japan/"
               >Travel-to-Japan</a
